--- a/index.html
+++ b/index.html
@@ -1,10 +1,121 @@
 <!DOCTYPE html>
 <html lang="ka">
 <head>
-  <meta charset="UTF-8">
-  <title>Landscape test</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>ლანდშაფტის დიზაინი • მთავარი</title>
+  <meta name="description" content="ლანდშაფტის დიზაინი, ბაღების მოწყობა და გამწვანება. ვქმნით ბუნებასთან ჰარმონიას ქალაქის შუაგულშიც.">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
-  <h1>საიტი იტვირთება...</h1>
+  <!-- Header / Navbar -->
+<header class="site-header">
+  <div class="container nav">
+    <a href="index.html" class="logo">🌿 Landscape</a>
+
+    <button class="nav-toggle" aria-expanded="false" aria-label="მენიუს გახსნა">
+      <span></span><span></span><span></span>
+    </button>
+
+    <nav class="nav-menu">
+      <ul class="menu">
+        <li><a href="index.html">მთავარი</a></li>
+        <li><a href="works.html">ნამუშევრები</a></li>
+        <li><a href="courses.html">კურსები</a></li>
+        <li><a href="projects.html">პროექტები</a></li>
+        <li><a href="blog.html">ბლოგი</a></li>
+        <li><a href="index.html#about">ჩვენ შესახებ</a></li>
+        <li><a href="index.html#contact">კონტაქტი</a></li>
+      </ul>
+    </nav>
+  </div>
+</header>
+
+
+  <!-- Hero Slider -->
+  <section class="hero">
+    <div class="slider" id="heroSlider">
+      <div class="slide active" style="background-image:url('assets/img/hero1.jpg')"></div>
+      <div class="slide" style="background-image:url('assets/img/hero2.jpg')"></div>
+      <div class="slide" style="background-image:url('assets/img/hero3.jpg')"></div>
+
+      <div class="hero-overlay">
+        <h1>ლანდშაფტის დიზაინი • ბაღები • მწვანე ზონები</h1>
+        <p>ვქმნით ბუნებასთან ჰარმონიას ქალაქის შუაგულშიც.</p>
+        <a href="#contact" class="btn">დაგვიკავშირდით</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- About -->
+  <section id="about" class="section about">
+    <div class="container about-grid">
+      <div class="about-text">
+        <h2>ჩვენ შესახებ</h2>
+        <p>
+          ვმუშობთ ლანდშაფტის დიზაინზე, ბაღების მოწყობაზე და სივრცეების გამწვანებაზე.
+          დაგეხმარებით სწორი მცენარეების შერჩევაში, ავაწყობთ სარწყავ სისტემებს და
+          ვიზრუნებთ თქვენი ეზოს სრულყოფილ იერსახეზე.
+        </p>
+        <ul class="checks">
+          <li>დიზაინის კონსულტაცია</li>
+          <li>პროექტირება და დაგეგმარება</li>
+          <li>მონტაჟი და მოვლა</li>
+        </ul>
+        <a href="works.html" class="link">ნახეთ ნამუშევრები →</a>
+      </div>
+      <div class="about-image">
+        <img src="assets/img/hero2.jpg" alt="ბაღის ლანდშაფტი">
+      </div>
+    </div>
+  </section>
+
+  <!-- Contact -->
+  <section id="contact" class="section contact">
+    <div class="container">
+      <h2>დაგვიკავშირდით</h2>
+      <p class="muted">შეავსეთ ფორმა და დაგიკავშირდებით. (საჩვენებელი ვერსია – გაგზავნა დემო ალერტით)</p>
+
+      <form id="contactForm" class="form">
+        <div class="grid-2">
+          <div class="form-field">
+            <label for="fname">სახელი</label>
+            <input type="text" id="fname" name="fname" placeholder="მაგ: ნინო" required>
+          </div>
+          <div class="form-field">
+            <label for="lname">გვარი</label>
+            <input type="text" id="lname" name="lname" placeholder="მაგ: ბერიძე" required>
+          </div>
+        </div>
+
+        <div class="grid-2">
+          <div class="form-field">
+            <label for="email">ელ-ფოსტა</label>
+            <input type="email" id="email" name="email" placeholder="you@example.com" required>
+          </div>
+          <div class="form-field">
+            <label for="phone">ტელეფონი</label>
+            <input type="tel" id="phone" name="phone" placeholder="+995 5XX XX XX XX" required>
+          </div>
+        </div>
+
+        <div class="form-actions">
+          <button type="submit" class="btn">გაგზავნა</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="site-footer">
+    <div class="container">
+      <p>© <span id="year"></span> Landscape • ყველა უფლება დაცულია</p>
+    </div>
+  </footer>
+
+  <script src="assets/js/main.js"></script>
 </body>
 </html>
